+ Add build + debug support

--- a/project.json
+++ b/project.json
@@ -36,7 +36,13 @@
 
   "buildOptions": {
     "emitEntryPoint": true,
-    "preserveCompilationContext": true
+    "preserveCompilationContext": true,
+    "debugType": "portable",
+    "compile": {
+      "exclude": [
+        "AngularJs/**/*.*"
+      ]
+    }
   },
 
   "runtimeOptions": {
